--- a/include/i18n/en_US/department.yaml
+++ b/include/i18n/en_US/department.yaml
@@ -17,6 +17,7 @@
   signature: |
     Support Department
   ispublic: 1
+  group_membership: 1
 
 - id: 2
   name: Sales
@@ -24,9 +25,11 @@
     Sales and Customer Retention
   ispublic: 1
   sla_id: 1
+  group_membership: 1
 
 - id: 3
   name: Maintenance
   signature: |
     Maintenance Department
   ispublic: 0
+  group_membership: 0
