--- a/include/i18n/en_US/help/tips/manage.filter.yaml
+++ b/include/i18n/en_US/help/tips/manage.filter.yaml
@@ -1,5 +1,5 @@
 #
-# This is popup help messages for the Admin Panel -> Manage -> Add New Filter
+# This is popup help messages for the Admin Panel -> Manage -> Filter
 #
 # Fields:
 # title - Shown in bold at the top of the popover window
@@ -13,38 +13,28 @@
 # must match the HTML #ids put into the page template.
 #
 ---
-filter_name:
-    title: Filter Name
-    content: >
 
 execution_order:
     title: Execution Order
     content: >
-        Choose a number that controls the priority of the filter being created. The
+        Enter a number that controls the priority of the filter. The
         lower the number, the higher the priority this filter will have in being
-        executed over against another filter that might have an identical match.
-        A match is found according to the filter rules set below. If you want this
-        filter to be the last filter applied to a match, enable <span
+        executed over against another filter that might have higher order of execution.
+        <br><br>
+        If you want this filter to be the last filter applied on a match, enable <span
         class="doc-desc-title">Stop Processing Further On Match</span>.
 
-filter_status:
-    title: Filter Status
+target_channel:
+    title: Channel
     content: >
-
-target:
-    title: Target
-    content: >
-        Choose the <span class="doc-desc-title">Target</span> for your <span
+        Choose the target <span class="doc-desc-title">Channel</span> for your <span
         class="doc-desc-title">ticket Filter</span>. The <span
-        class="doc-desc-title">Target</span> is the source that created the ticket.
-        So, for example, if you choose <span class="doc-desc-opt">Web Forms</span>,
+        class="doc-desc-title">Channel</span> is the source through which the ticket arrived into the system.
+        <br><br>
+        For example, if you choose <span class="doc-desc-opt">Web Forms</span>,
         you are saying that you want to apply the <span
         class="doc-desc-title">ticket Filter</span> to those tickets that
         originated from the Client Portal's webform.
-
-filter_rules:
-    title: Filter Rules
-    content: >
 
 rules_matching_criteria:
     title: Rules Matching Criteria
@@ -58,55 +48,42 @@ rules_matching_criteria:
         Filter</span> to be matched, choose <span class="doc-desc-opt">Match
         All</span>.
 
-basic_fields_criterion:
-    title: Basic Fields Criterion
-    content: >
-        The selectable options below this header are those elements which can be
-        found in any standard ticket. Note: the Email option here indicates from
-        whom the Email was sent.
-
-criterion_operator:
-    title: Criterion Operator
-    content: >
-        Choose an operator to control what kind of test is performed against the
-        chosen field on the left with the value entered in the text field on the
-        right.
-
-filter_actions:
-    title: Filter Actions
-    content: >
-
 reject_ticket:
     title: Reject Ticket
     content: >
-        If this is enabled, all other choices of action below will be ignored.
+        If this is enabled, further processing is stopped and all other choices of action below will be ignored on match.
 
 reply_to_email:
     title: Reply-To Email
     content: >
-        Enable this if you want your Help Desk to honor a Client's email
-        application's <span class="doc-desc-title">Reply To</span> data. This field
-        is only relevant if the <span class="doc-desc-title">Target</span> above is
-        an <span class="doc-desc-opt">Email Address</span>.
+        Enable this if you want your Help Desk to honor a User's email
+        application's <span class="doc-desc-title">Reply To</span> header.
+        This field is only relevant if the <span
+        class="doc-desc-title">Channel</span> above includes <span
+        class="doc-desc-opt">Email</span>.
 
 ticket_auto_response:
-    title: ticket Auto-Response
+    title: Disable Ticket Auto-Response
     content: >
         <em>Note: This will override any <span
-        class="doc-desc-title">Department</span> settings.</em>
+        class="doc-desc-title">Department</span> or <span class="doc-desc-title">Autoresponder settings</span>.</em>
 
 canned_response:
-    title: Canned Response
+    title: Canned Auto-Reply
     content: >
-        Choose the <span class="doc-desc-title">Canned Response</span> you want included in the email to go out from the Default Email Address of the <span class="doc-desc-title">Help Desk</span> or <span class="doc-desc-title">Department</span> (if enabled). The <span class="doc-desc-title">New ticket Auto-Reply</span> template in an <span class="doc-desc-title">Email Template Set</span> will control how the <span class="doc-desc-title">Canned Response</span> is included in that email. What <span class="doc-desc-title">Email Template Set</span> is used depends on what template set is assigned as default, or to a matching ticket's <span class="doc-desc-title">Department</span>.
+        Choose a <span class="doc-desc-title">Canned Response</span> you
+        want to be emailed to the user on <span
+        class="doc-desc-title">Ticket Filter</span> match.  The <span
+        class="doc-desc-title">New Ticket Auto-Reply</span> template used
+        depends on what <span class="doc-desc-title">template set</span> is
+        assigned as default, or to a matching ticket's <span
+        class="doc-desc-title">Department</span>.
     links:
       - title: Manage Canned Responses
         href: /scp/canned.php
-      - title: Manage Departments
-        href: /scp/departments.php
       - title: Manage Template Sets
         href: /scp/templates.php
-      - title: Edit the Default New Ticket Auto-Reply Template
+      - title: New Ticket Auto-Reply Template
         href: /scp/templates.php?id=2&a=manage
 
 department:
@@ -115,6 +92,9 @@ department:
         Choose what <span class="doc-desc-title">Department</span> you want the
         matches of the <span class="doc-desc-title">Ticket Filter</span> to be
         assigned.
+    links:
+      - title: Manage Departments
+        href: /scp/canned.php
 
 priority:
     title: Priority
@@ -123,8 +103,8 @@ priority:
         be applied to the matches of the <span class="doc-desc-title">Ticket
         Filter</span>.<br />
         <br />
-        <em>Note: This will override any <span
-        class="doc-desc-title">Department</span> settings.</em>
+        <em>Note: This will override <span
+        class="doc-desc-title">Department</span> or <span class="doc-desc-title"> Help Topic</span> settings.</em>
 
 sla_plan:
     title: SLA Plan
@@ -132,12 +112,20 @@ sla_plan:
         Choose the <span class="doc-desc-title">SLA Plan</span> you want to
         be applied to the matches of the <span class="doc-desc-title">Ticket
         Filter</span>.
+    links:
+      - title: Manage SLA Plans
+        href: /scp/slaplan.php
 
-auto_assign_to:
-    title: Auto-Assign to&hellip;
+auto_assign:
+    title: Auto-Assign
     content: >
-        Choose the Agent to whom you want the matches of the <span
+        Choose an Agent or a Team to whom you want the matches of the <span
         class="doc-desc-title">Ticket Filter</span> to be assigned.
+    links:
+      - title: Manage Agents
+        href: /scp/staff.php
+      - title: Manage Teams
+        href: /scp/teams.php
 
 help_topic:
     title: Help Topic
@@ -145,6 +133,9 @@ help_topic:
         Choose the <span class="doc-desc-title">Help Topic</span> you want to
         be applied to the matches of the <span class="doc-desc-title">Ticket
         Filter</span>.
+    links:
+      - title: Manage Help Topics
+        href: /scp/helptopics.php
 
 admin_notes:
     title: Admin Notes
