--- a/include/i18n/en_US/help/tips/settings.access.yaml
+++ b/include/i18n/en_US/help/tips/settings.access.yaml
@@ -31,41 +31,44 @@ password_expiration_policy:
 allow_password_resets:
     title: Allow Password Resets
     content: >
-        Enable this feature if you would like to display the 
+        Enable this feature if you would like to display the
         <span class="doc-desc-title">Forgot My Password</span> link on the
         <span class="doc-desc-title">Staff Log In Panel</span>
-        after 2 failed log in attempts.
+        after a failed log in attempt.
 
 reset_token_expiration:
     title: Password Reset Window
     content: >
         Choose the duration (in minutes) for which the <span class="doc-desc-title">
-        Password Reset Token</span> will be valid. When an Agent requests a <span
+        Password Reset Tokens</span> will be valid. When an Agent requests a <span
         class="doc-desc-title">Password Reset</span>, they are emailed a token that
-        will permit the reset to take place. This token however must have an
-        expiration. 
+        will permit the reset to take place.
 
 staff_session_timeout:
     title: Staff Session Timeout
     content: >
         Choose the maximum idle time (in minutes) before an Agent is required to
-        log in again. If you would like to disable <span
-        class="doc-desc-title">Staff Session Timeouts</span>,
-        enter 0 to <span class="doc-desc-opt">disable</span>.
+        log in again.
+        <br><br>
+        If you would like to disable <span class="doc-desc-title">Staff
+        Session Timeouts</span>, enter 0.
 
 client_session_timeout:
-    title: Client Session Timeout
+    title: User Session Timeout
     content: >
-        Choose the maximum idle time (in minutes) before a Client is required to
-        log in again. If you would like to disable <span
-        class="doc-desc-title">Client</span> <span class="doc-desc-title">Session
-        Timeouts,</span> enter 0 to <span class="doc-desc-opt">disable</span>.
+        Choose the maximum idle time (in minutes) before a User is required to
+        log in again.
+        <br><br>
+        If you would like to disable <span
+        class="doc-desc-title">User Session Timeouts,</span> enter 0.
 
 bind_staff_session_to_ip:
     title: Bind Staff Session to IP
     content: >
-        Enable this if you want the Agent to be remembered by their current IP
-        at the time of Log In.
+        Enable this if you want Agent to be remembered by their current IP
+        upon Log In.
+        <br><br>
+        This setting is not recommened for users assigned IP addreses dynamically.
 
 registration_method:
     title: Registration Options
@@ -89,7 +92,7 @@ registration_method:
                 <td>Anyone can create a ticket, but only agents
                     can register accounts</td></tr>
             <tr><td>Yes</td><td>Private</td>
-                <td>Client access is by invitation only</td></tr>
+                <td>User access is by invitation only</td></tr>
             <tr><td>No</td><td>Disabled</td>
                 <td>No one can register for an account, but anyone can
                     create a ticket. <em>This was how osTicket functioned
