--- a/include/i18n/en_US/help/tips/staff.addnew_department.yaml
+++ b/include/i18n/en_US/help/tips/staff.addnew_department.yaml
@@ -28,53 +28,51 @@ name:
 type:
     title: Type
     content: >
-        Select Private if the Department will only be pertinent to matters among
-        other Agents. Additionally, when labelled as Private, the Email Signature
+        Select Private if you do not want the Department assignment 
+		visible to the user from the Client Portal. 
+        Additionally, when labelled as Private, the Email Signature
         will not display in replies.
 
 email:
     title: Email
     content: >
-        Email Address assigned to this Department. When Tickets are assigned to
-        this Department, for example, it is this Email Address from whom the Client
-        will receive an Auto-Response Email.
+        Email Address used when responses are sent to users from Agents or assigned staff on tickets in this department. 
 
 template:
     title: Template
     content: >
-        Template Set used for Auto-Responses, Alerts &amp; Notices for all Tickets
+        Template Set used for Auto-Responses and Alerts &amp; Notices for all Tickets
         associated with this Department.
 
 sla:
     title: SLA
     content: >
-        Service Level Agreement  for all tickets transferred to Department or
-        auto-assigned by Help Topic. (To create or edit a SLA Plan, see Admin Panel
+        Service Level Agreement for all tickets assigned or transferred to Department. (To create or edit a SLA Plan, see Admin Panel
         -> Manage -> SLA Plans).
 
 group_membership:
     title: Group Membership
     content: >
-        You may optionally choose to extend membership access to Groups (to whom
-        Alerts and Notices will be sent). (To edit Groups, see Admin Panel ->
+        To send Alerts & Notices to groups allowed access to this department from their group access. 
+		Otherwise, only staff assigned to this department will receive Alerts & Notices (if enabled). (To edit Groups, see Admin Panel ->
         Agents (Staff) -> Groups).
 
 auto_response_settings:
     title: Auto-Response Settings
     content: >
-        This allows you to disable New Ticket Auto-Response to Clients and/or New
+        This allows you to disable New Ticket Auto-Response and/or New
         Message Auto-Response to users when creating a ticket in this department.
 
 new_ticket:
     title: New Ticket
     content: >
-        Click the checkbox if do not want an Email automatically sent to the Client
+        Click the checkbox if do not want an email automatically sent to the Client
         when a New Ticket is Opened.
 
 new_message:
     title: New Message
     content: >
-        Click the checkbox if do not want an Email automatically sent when a New
+        Click the checkbox if do not want an email automatically sent when a New
         Message is received.
 
 auto_response_email:
@@ -87,18 +85,13 @@ auto_response_email:
 department_access:
     title: Department Access
     content: >
-        Department Manager and Primary Members will always have access independent
-        of group selection or assignment. To commission an Agent as a Department
-        Manager, you must first add that Agent to the Department by editing that
-        Agent’s Account. (To edit an Agent’s Account, see Admin Panel -> Agent
+        Allow staff members assigned to another department to have access to this deparmtent's tickets. 
+		Staff's access will be limited to their assigned group permissions. Be sure to check the above "Group Membership" if you would also like staff with group access to receive Alerts & Notices.'(To edit an Agent’s Account, see Admin Panel -> Agent
         (Staff) Members -> Choose the Agent to Edit).
 
 department_signature:
     title: Department Signature
     content: >
         Signature is made available as a choice, for Public Departments, on Ticket
-        Reply. What you create here will be an optional Signature that perhaps
-        appears at the end of the Agent’s Ticket Responses. Whether this signature
-        appears or not depends on the Email Template that will be used in a Ticket
-        Response. (To create email templates, see Admin Panel -> Emails ->
-        Templates ).
+        Reply. (To create email templates, see Admin Panel -> Emails ->
+        Templates.)
