--- a/include/i18n/en_US/help/tips/staff.addnew_staff.yaml
+++ b/include/i18n/en_US/help/tips/staff.addnew_staff.yaml
@@ -28,28 +28,15 @@ username:
         class="doc-desc-title">username</span> that is unique to your <span
         class="doc-desc-title">Help Desk</span>.
 
-first_name:
-    title: First Name
-    content: >
-        The full name will generally be visible to any Agent/administrator you create on your <span class="doc-desc-title">Help Desk</span>. However, you can choose to hide all Agent names inside of ticket responses in <span class="doc-desc-title">Ticket Settings</span>.
-    links:
-      - title: Hide Agent Names in Ticket Responses
-        href: /scp/settings.php?t=tickets
-
-last_name:
-    title: Last Name
-    content: >
-        The full name will generally be visible to any Agent/administrator you create on your <span class="doc-desc-title">Help Desk</span>. However, you can choose to hide all Agent names inside of ticket responses in <span class="doc-desc-title">Ticket Settings</span>.
-    links:
-      - title: Hide Agent Names in Ticket Responses
-        href: /scp/settings.php?t=tickets
 
 email_address:
     title: Email Address
     content: >
-        This is the Agent’s email that will receive <span
+        Agent's email that will receive <span
         class="doc-desc-title">Alerts</span> from the <span
         class="doc-desc-title">Help Desk</span>.
+		<br><br>
+		Staff can log into the staff control panel with either username or email address. 
 
 phone_number_mobile_number:
     title: Phone Number/Mobile Number
@@ -62,10 +49,10 @@ mobile_number:
 welcome_email:
     title: Welcome Email
     content: >
-        Enable this to send the new Agent an email with an account access
-        link. By following the link, the Agent will then be able to set
-        their own password. Disable this if you would like to choose a
-        password for them now.
+        Email sent to new Agents with an account access
+        link. By following the link in the sent email, the Agent will then be able to set
+        their own password. To disable, uncheck this box and set password for staff. 
+		You will need to communicated log-in information to new staff.    
 
 account_password:
     title: Account Password
@@ -86,13 +73,15 @@ forced_password_change:
     title: Forced Password Change
     content: >
         Enable this if you would like to force the new Agent to create
-        their own password. <em>Recommended</em>
+        their own password upon next log-in. <em>Recommended</em>
 
 agents_signature:
     title: Agent’s Signature
     content: >
-        Create an optional signature that perhaps appears at
-        the end of the Agent’s ticket responses. Whether this signature appears or not depends on the <span class="doc-desc-title">email template</span> that will be used in a ticket response.
+        Create an optional signature for the Agent which can be selected when sending a response. 
+		
+		
+		 Whether this signature appears or not depends on the <span class="doc-desc-title">email template</span> that will be used in a ticket response.
     links:
       - title: Manage Email Templates
         href: /scp/templates.php
@@ -100,37 +89,26 @@ agents_signature:
 account_status:
     title: Account Status
     content: >
-        If you change the Agent's status to <span
-        class="doc-desc-opt">Locked</span>, then he/she will not be able to
-        log in. If you change the Agent’s status to <span 
-        class="doc-desc-opt">Vacation Mode</span>, the Agent will be able
-        to log in, but will not receive any of his normal <span
-        class="doc-desc-title">Alerts</span> or have any tickets assigned.
+        If the Agent's status is <span
+        class="doc-desc-opt">Locked</span>, they will not be able to
+        log in to the help desk. 
 
 assigned_group:
     title: Assigned Group
     content: >
         The <span class="doc-desc-title">Group</span> that you choose for
         this Agent to belong will decide what permissions the Agent has
-        within the <span class="doc-desc-title">Help Desk</span>. The
-        difference between <span class="doc-desc-title">Teams</span> and
-        <span class="doc-desc-title">Groups</span> is that a <span
-        class="doc-desc-title">Group</span> decides permissions for its
-        Agents, and a <span class="doc-desc-title">Team</span> is simply a
-        collection of Agents with a common purpose.
+        within the <span class="doc-desc-title">Help Desk</span>. 
+		
     links:
       - title: Manage Groups
         href: /scp/groups.php
-      - title: Manage Teams
-        href: /scp/teams.php
-
+      
 primary_department:
     title: Primary Department
     content: >
-        Choose the <span class="doc-desc-title">department</span> in which you would like this Agent to be primarily
-        active. This is necessary if you wish to commission this <span
-        class="doc-desc-title">Agent</span> as the <span
-        class="doc-desc-title">Department Manager</span>.
+        Choose the primary <span class="doc-desc-title">department</span> in this Agent is assigned. 
+		
     links:
       - title: Manage Departments
         href: /scp/departments.php
@@ -162,4 +140,7 @@ directory_listing:
 vacation_mode:
     title: Vacation Mode
     content: >
-        Change the Agent's status to <span class="doc-desc-opt">Vacation Mode</span> if you would like to temporarily suspend any reception of <span class="doc-desc-title">Alerts</span> and ticket assignments.
+		If you change the Agent’s status to <span 
+		class="doc-desc-opt">Vacation Mode</span>, the Agent will be able
+		        to log in, but will not receive any of his normal <span
+		        class="doc-desc-title">Alerts</span> or have any tickets assigned.
