--- a/include/i18n/en_US/help/tips/manage.pages.yaml
+++ b/include/i18n/en_US/help/tips/manage.pages.yaml
@@ -19,6 +19,9 @@ site_pages:
         Site pages can serve as a mini Content Management System (CMS). You
         can define multiple landing, offline, and thank-you pages and
         configure them in the company settings and help topics.
+    links:
+      - title: Company Settings
+        href: /scp/settings?t=pages
 
 type:
     title: Type
