--- a/include/i18n/en_US/help/tips/staff.addnew_staff.yaml
+++ b/include/i18n/en_US/help/tips/staff.addnew_staff.yaml
@@ -24,109 +24,79 @@ agent_staff_information:
 username:
     title: Username
     content: >
-        Please choose an <span class="doc-desc-title">Agent</span> <span
-        class="doc-desc-title">username</span> that is unique to your <span
-        class="doc-desc-title">Help Desk</span>.
-
+        Please choose an Agent <span class="doc-desc-title">username</span>
+        that is unique to your <span class="doc-desc-title">Help
+        Desk</span>.
 
 email_address:
     title: Email Address
     content: >
-        Agent's email that will receive <span
-        class="doc-desc-title">Alerts</span> from the <span
+        Enter Agent's email that will receive <span
+        class="doc-desc-title">Alerts &amp; Notices</span> from the <span
         class="doc-desc-title">Help Desk</span>.
 		<br><br>
-		Staff can log into the staff control panel with either username or email address. 
-
-phone_number_mobile_number:
-    title: Phone Number/Mobile Number
-    content: >
-
-mobile_number:
-    title: Mobile Number
-    content: >
+		Staff can sign in into the staff control panel with either username or email address.
 
 welcome_email:
     title: Welcome Email
     content: >
-        Email sent to new Agents with an account access
-        link. By following the link in the sent email, the Agent will then be able to set
-        their own password. To disable, uncheck this box and set password for staff. 
-		You will need to communicated log-in information to new staff.    
+        Send the new Agent an account access link from which the Agent will
+        be able to set thier own password. If unchecked, you will need to set password
+        and communicate the log-in information to the new staff.
 
 account_password:
     title: Account Password
     content: >
-        You, as an <span class="doc-desc-title">administrator</span>, may
-        change an Agent’s password. You may optionally require the Agent to
-        set their own password on next login.
-
-password:
-    title: Password
-    content: >
-
-confirm_password:
-    title: Confirm Password
-    content: >
+        As an <span class="doc-desc-title">administrator</span>, you may
+        change an Agent’s password.
 
 forced_password_change:
     title: Forced Password Change
     content: >
-        Enable this if you would like to force the new Agent to create
-        their own password upon next log-in. <em>Recommended</em>
+        Enable this if you would like to force the new Agent to change
+        their own password upon next log-in.
 
 agents_signature:
     title: Agent’s Signature
     content: >
-        Create an optional signature for the Agent which can be selected when sending a response. 
-		
-		
-		 Whether this signature appears or not depends on the <span class="doc-desc-title">email template</span> that will be used in a ticket response.
-    links:
-      - title: Manage Email Templates
-        href: /scp/templates.php
+        Create a signature for the Agent which can be selected when replying to a ticket.
 
 account_status:
     title: Account Status
     content: >
         If the Agent's status is <span
         class="doc-desc-opt">Locked</span>, they will not be able to
-        log in to the help desk. 
+        sign in to the help desk.
 
 assigned_group:
     title: Assigned Group
     content: >
         The <span class="doc-desc-title">Group</span> that you choose for
-        this Agent to belong will decide what permissions the Agent has
-        within the <span class="doc-desc-title">Help Desk</span>. 
-		
+        this Agent to belong will determine what permissions the Agent has
+        within the <span class="doc-desc-title">Help Desk</span>.
     links:
       - title: Manage Groups
         href: /scp/groups.php
-      
+
 primary_department:
     title: Primary Department
     content: >
-        Choose the primary <span class="doc-desc-title">department</span> in this Agent is assigned. 
-		
+        Choose the primary <span class="doc-desc-title">department</span> to which this Agent belongs.
+
     links:
       - title: Manage Departments
         href: /scp/departments.php
-
-time_zone:
-    title: Time Zone
-    content: >
 
 daylight_saving:
     title: Daylight Saving
     content: >
         Enable this feature if you would like Daylight Saving to automatically
-        come into play for this Agent’s timestamp.
+        come into play for this Agent’s time zone.
 
 limited_access:
     title: Limited Access
     content: >
-        Would you like to limit this Agent’s access to only those tickets which he/she is assigned?
+        If enabled, the Agent will only have access to tickets assigned directly or via the Team.
 
 directory_listing:
     title: Directory Listing
@@ -140,7 +110,8 @@ directory_listing:
 vacation_mode:
     title: Vacation Mode
     content: >
-		If you change the Agent’s status to <span 
-		class="doc-desc-opt">Vacation Mode</span>, the Agent will be able
-		        to log in, but will not receive any of his normal <span
-		        class="doc-desc-title">Alerts</span> or have any tickets assigned.
+        If you change the Agent’s status to <span
+        class="doc-desc-opt">Vacation Mode</span>, the Agent will not
+        receive any <span class="doc-desc-title">Alerts &amp; Notices</span>
+        nor be available for tickets assignment.
+
