fix: Rename help tip files

--- a/include/i18n/en_US/help/tips/knowledgebase.faq.yaml
+++ b/include/i18n/en_US/help/tips/knowledgebase.faq.yaml
@@ -1,5 +1,5 @@
 #
-# This is popup help messages for the Staff Panel -> Knowledgebase -> FAQ -> Add New FAQ
+# This is popup help messages for the Staff Panel -> Knowledgebase -> FAQ
 #
 # Fields:
 # title - Shown in bold at the top of the popover window
