--- a/include/i18n/en_US/help/tips/staff.groups.yaml
+++ b/include/i18n/en_US/help/tips/staff.groups.yaml
@@ -1,5 +1,5 @@
 #
-# This is popup help messages for the Admin Panel -> Staff -> Groups
+# This is popup help messages for the Admin Panel -> Staff -> Add New Group  -> User Group Form
 #
 # Fields:
 # title - Shown in bold at the top of the popover window
@@ -17,30 +17,71 @@ add_new_group:
     title: Add New Group
     content: >
 
-user_groups:
-    title: User Groups
+group_information:
+    title: Group Information
     content: >
 
-group_name:
-    title: Group Name
+name:
+    title: Name
     content: >
 
 status:
     title: Status
     content: >
+	By disabling, staff assigned to the group will be limited in their access to the help desk. 
 
-members:
-    title: Members
+group_permissions:
+    title: Group Permissions
     content: >
 
-departments:
-    title: Departments
+can_create_tickets:
+    title: Can Create Tickets
     content: >
 
-created_on:
-    title: Created On
+can_edit_tickets:
+    title: Can Edit Tickets
     content: >
 
-last_updated:
-    title: Last Updated
+can_post_reply:
+    title: Can Post Reply
+    content: >
+
+can_close_tickets:
+    title: Can Close Tickets
+    content: >
+
+can_assign_tickets:
+    title: Can Assign Tickets
+    content: >
+
+can_transfer_tickets:
+    title: Can Transfer Tickets
+    content: >
+
+can_delete_tickets:
+    title: Can Delete Tickets
+    content: >
+
+can_ban_emails:
+    title: Can Ban Emails
+    content: >
+
+can_manage_premade:
+    title: Can Manage Premade
+    content: >
+
+can_manage_faq:
+    title: Can Manage FAQ
+    content: >
+
+can_view_staff_stats_:
+    title: Can View Staff Stats.
+    content: >
+
+department_access:
+    title: Department Access
+    content: >
+
+support:
+    title: Support
     content: >
